--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     
     <script
       src="https://kit.fontawesome.com/78efde65da.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
