--- a/index.html
+++ b/index.html
@@ -193,12 +193,8 @@
         <img src="images/Margin.png" alt="" />
       </div>
     </nav>
-    <div
-      class="firstpage"
-      data-aos="fade-up"
-      data-aos-anchor-placement="bottom-bottom"
-    >
-      >
+    <div class="firstpage"data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+      
       <div class="themoney">
         <h1>The money app for Africans.</h1>
         <p>
@@ -218,7 +214,7 @@
       data-aos="fade-up"
       data-aos-anchor-placement="bottom-bottom"
     >
-      >
+      
       <div class="rows">
         <div class="rowcontent">
           <div class="icon"><i class="fa-solid fa-credit-card"></i></div>
