--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
   <div class="footercontainer">
     <div class="container">
       <div class="logocontainer">
-        <img src="/images/logo.png" alt="" />
+        <img src="/images/Link.png" alt="" />
       </div>
       <div class="pbcht">
         <span class="footerheader">Personal</span>
@@ -728,7 +728,7 @@
       </div>
       <div class="footercontactinfo">
         <div class="contactinfocol">
-          <img src="assest/Link.png" alt="kuda-logo">
+         
           <span class="footerheader">Contact</span>
           <a href="help@kuda.com">help@kuda.com</a>
           <div class="icon-container">
