--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     </div>
 
     <div class="marquee">
-      <h2 class="marquee-header">Don’t just take our word for it</h2>
+      <h2 class="marquee-header" id="must">Don’t just take our word for it</h2>
       <div class="marquee-content">
         <div class="testimonial">
           <p>
