--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
       <img src="/images/entreeCapital.png" alt="">
       <img src="/images/sbiHoldings.png" alt="">
       <img src="/images/target.png" alt="">
-      <img src="/images/visa.png" alt="">
+      <img class="move" src="/images/visa.png" alt="">
     </div>
 
   </div>
